force-app/main/default/objects/maps__Timesheet_Activity__c/maps__Timesheet_Activity__c.object-meta.xml
<CustomObject>
    <label>Timesheet Activity</label>
    <nameField>
        <displayFormat>Timesheet Activity-{00000000}</displayFormat>
        <label>Timesheet Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>