force-app/main/default/objects/maps__Timesheet_Activity__c/fields/maps__Location_Name__c.field-meta.xml
<CustomField>
    <fullName>maps__Location_Name__c</fullName>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>