force-app/main/default/objects/maps__Timesheet_Activity__c/fields/maps__Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>maps__Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Created</label>
    <type>Checkbox</type>
</CustomField>