force-app/main/default/objects/maps__Timesheet_Activity__c/fields/maps__Start__c.field-meta.xml
<CustomField>
    <fullName>maps__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>